Update tests to use testNG
Give test classes more meaningful names, and remove extranious build.xml files.

Implement consistant formatting

Implement logging framework